--- a/templates/base.html
+++ b/templates/base.html
@@ -36,33 +36,32 @@
 	<div id="root">
 		<header class="{{ config.extra.materialize.colorscheme.background.three }}">
 			<nav class="nav top-nav {{ config.extra.materialize.colorscheme.background.one }}" role="navigation">
-				{% if config.extra.materialize.sidebar != "left" %}
-				<a id="logo-container" href="#" class="brand-logo">
-					<img src="{{ config.extra.materialize.logo.small }}" class="logo" alt="Logo">
-				</a>
-				{% endif %}
-				<ul class="right hide-on-med-and-down">
-					{% if config.extra.materialize.home %}
-						<li><a href="{{ config.extra.materialize.home.url }}">{{ config.extra.materialize.home.name }}</a></li>
+				<div class="nav-wrapper">
+					<a href="#!" class="brand-logo">
+						<img src="{{ config.extra.materialize.logo.small }}" class="logo" alt="Logo">
+					</a>
+					<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+					<ul class="right hide-on-med-and-down">
+						{% if config.extra.materialize.home %}
+							<li><a href="{{ config.extra.materialize.home.url }}">{{ config.extra.materialize.home.name }}</a></li>
+						{% endif %}
+						{% for link in config.extra.materialize.links %}
+							<li><a href="{{link.url}}">{{link.name}}</a></li>
+						{% endfor %}
+						{% if config.generate_tags_pages %}
+							<li><a href="{{ get_url(path="tags") }}">Tags</a></li>
+						{% endif %}
+						{% if config.generate_categories_pages %}
+							<li><a href="{{ get_url(path="categories") }}">Categories</a></li>
+						{% endif %}
+					</ul>
+					{% if config.extra.materialize.sidebar == "left" %}
+						{% block sidebar %}
+						{% endblock sidebar%}
 					{% endif %}
-					{% for link in config.extra.materialize.links %}
-						<li><a href="{{link.url}}">{{link.name}}</a></li>
-					{% endfor %}
-					{% if config.generate_tags_pages %}
-						<li><a href="{{ get_url(path="tags") }}">Tags</a></li>
-					{% endif %}
-					{% if config.generate_categories_pages %}
-						<li><a href="{{ get_url(path="categories") }}">Categories</a></li>
-					{% endif %}
-				</ul>
-				<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-				<!--/div -->
+				</div>
 			</nav>
 		</header>
-		{% if config.extra.materialize.sidebar == "left" %}
-			{% block sidebar%}
-			{% endblock sidebar %}
-		{% endif %}
 		<main>
 			<div class="container">
 				<div class="row">
@@ -71,11 +70,6 @@
 				</div>
 			</div>
 		</main>
-		{% if config.extra.materialize.sidebar == "right" %}
-			{% block sidebar%}
-			{% endblock sidebar %}
-		{% endif %}
-
 		<footer class="page-footer {{ config.extra.materialize.colorscheme.background.one }}">
 			<div class="container">
 				<div class="row">
