--- a/templates/section.html
+++ b/templates/section.html
@@ -17,26 +17,16 @@
 		</nav>
 	</div>
 	<div class="row">
-		<ul class="tabs">
-			{% set content_active = "" %}
-			{% set sections_active = "" %}
-			{% set pages_active = "" %}
-			{# todo find some way to improve this block
-				{% if section.summary %}
-					{% set content_active = "active" %}
-				{% elif section.pages %}
-					{% set sections_active = "active" %}
-				{% else %}
-					{% set sections_active = "active" %}
-				{% endif %}
-			#}
-			{% set content_active = "active" %}
-			<li class="tab col s3 {{ content_active }}"><a href="#content">Content</a></li>
-			<li class="tab col s3 {{ sections_active }}"><a href="#sections">Sections</a></li>
-			<li class="tab col s3 {{ pages_active }}"><a href="#pages">Pages</a></li>
-		</ul>
-		<div id="pages" class="col s12">
-			{% if section.pages %}
+		<div id="content" class="col s12">
+			{{ section.content | safe }}
+		</div>
+		{% if section.pages and section.subsections %}
+			{% set width = 6 %}
+		{% else %}
+			{% set width = 12 %}
+		{% endif %}
+		{% if section.pages %}
+			<div id="pages" class="col s{{width}}">
 				<h3>Pages</h3>
 				<ul class="collection">
 					{% for content_page in section.pages %}
@@ -53,10 +43,10 @@
 						</li>
 					{% endfor %}
 				</ul>
-			{% endif %}
-		</div>
-		<div id="sections" class="col s12">
-			{% if section.subsections %}
+			</div>
+		{% endif %}
+		{% if section.subsections %}
+			<div id="sections" class="col s{{ width}}">
 				<h3>Sections</h3>
 				<ul class="collection">
 					{% for content_section in section.subsections %}
@@ -77,11 +67,8 @@
 						</li>
 					{% endfor %}
 				</ul>
-			{% endif %}
-		</div>
-		<div id="content" class="col s12">
-			{{ section.content | safe }}
-		</div>
+			</div>
+		{% endif %}
 	</div>
 {% endblock main %}
 {% block script %}
